Fix mobile menu toggle and footer structure

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 
   <meta name="keywords" content="
     antalya diafon,
+    antalya diafon,
     antalya elektronik,
     mas diafon,
     mas diyafon,
     görüntülü diafon,
+    görüntülü diafon
     görüntülü diyafon,
     ip diafon,
     diafon montaj,
